@@ -3,12 +3,16 @@
 # must be run from this directory
 guile=${GUILE-../../libguile/guile}
 
+if test "X$srcdir" = X; then
+    srcdir=.
+fi
+
 set -e
 
 #
 # ./safe untrusted.scm
 #
-GUILE_LOAD_PATH=../.. $guile -s safe untrusted.scm > TMP
+$guile -s $srcdir/safe $srcdir/untrusted.scm > TMP
 cat <<EOF | diff -u - TMP
 1
 1
@@ -27,7 +31,7 @@ rm -f TMP
 #
 # ./safe evil.scm
 #
-GUILE_LOAD_PATH=../.. $guile -s safe evil.scm > TMP
+$guile -s $srcdir/safe $srcdir/evil.scm > TMP
 cat <<EOF | diff -u - TMP
 ** Exception: (unbound-variable #f "Unbound variable: ~S" (open-input-file) #f)
 EOF
