@@ -19,6 +19,7 @@
 ##   to the Free Software Foundation, Inc., 59 Temple Place, Suite
 ##   330, Boston, MA 02111-1307 USA
 
-EXTRA_DIST = README simple-hello.scm hello fact
+EXTRA_DIST = README simple-hello.scm hello fact check.test
 
-TESTS = check.test
+installcheck:
+	srcdir=$(srcdir) GUILE_LOAD_PATH=$(top_srcdir) $(srcdir)/check.test
